# acoustic-companion

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  app.js  index.html  package-lock.json  package.json  style.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml
css/: chords.css  fretboard.css  layout.css  rhythm.css  riff.css  tuner.css
docs/: architecture.md  audio_synthesis.md  contributing.md  tuner_and_practice.md  ui_consistency_guide.md  verification.md
js/: audio.js  fretboard.js  lyrics.js  riff.js  tuner.js
scripts/: install-hooks.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
www/: index.html
www/css/: chords.css  fretboard.css  layout.css  lyrics.css  rhythm.css  riff.css  tuner.css  variables.css
www/js/: audio.js  chords.js  fretboard.js  lyrics.js  metronome.js  riff.js  state.js
