[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

[profile.release]
opt-level = 3             # Optimize for maximum execution speed
lto = true                # Enable Link-Time Optimization (LTO) across all crates
codegen-units = 1         # Maximize LLVM optimization passes by using a single codegen unit
panic = "abort"           # Eliminate stack unwinding tables to shrink binary size and overhead
strip = true              # Automatically strip all debug info and symbol tables from the final binary

